--- a/LangChain-db-queries.ipynb
+++ b/LangChain-db-queries.ipynb
@@ -179,7 +179,7 @@
       "outputs": [],
       "source": [
         "# Specify query\n",
-        "query = \"What kinds of sensors are used in city lighting\"\n",
+        "query = \"...\"\n",
         "\n",
         "# Call the `similarity_search_with_score` method on `db`\n",
         "results = db.similarity_search_with_relevance_scores(query, k = 5)\n",
